Overflow Fixed

--- a/style.css
+++ b/style.css
@@ -12,12 +12,14 @@ font-family: "Montserrat", sans-serif;
 
 html {
   font-size: 62.5%;
+  overflow-x: hidden;
 }
 body {
   font-family: "Montserrat", sans-serif;
   color: #3d2514;
   font-weight: 400;
   line-height: 1;
+  overflow-x: hidden;
 }
 
 a {
@@ -102,6 +104,7 @@ img {
 
 header {
   background-image: url(./images/hero-bg.png);
+  position: relative;
 }
 
 .navbar {
@@ -905,7 +908,7 @@ footer {
   .nav-link:visited {
     font-size: 3rem;
     width: inherit;
-    padding: 2rem 0;
+    padding: 2.13rem 0 2rem;
     border-bottom: 1px solid #3d2514;
   }
 
